hopefully fix crashing on firefox ?

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
     background:#f2f2f2;
     display: block;
     padding: 0.385em;
-    font-size: 13px;
-    font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-size: 16px;
+    font-family: "SF Pro Display", "Helvetica", "Helvetica Neue", "Arial", sans-serif;
 }
 hr
 {
@@ -263,6 +263,7 @@ div.img img {
     padding: 0;
     overflow: hidden;
     font-weight: 200;
+    border-radius: 10px;
     /*font-family: 'Source Sans Pro';*/
 
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#aebcbf+0,0a0e0a+0,bebebe+0,ebebeb+50,bebebe+100 */
